<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_cat_appearance">

        <ListPreference
            android:key="theme_mode"
            android:title="@string/pref_theme_title"
            android:entries="@array/theme_mode_entries"
            android:entryValues="@array/theme_mode_values"
            android:defaultValue="AUTO"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_recording">

        <ListPreference
            android:key="accuracy_cutoff_m"
            android:title="@string/pref_accuracy_title"
            android:entries="@array/accuracy_entries"
            android:entryValues="@array/accuracy_values"
            android:defaultValue="50"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="auto_pause"
            android:title="@string/pref_auto_pause_title"
            android:summary="@string/pref_auto_pause_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="auto_record"
            android:title="@string/pref_auto_record_title"
            android:summary="@string/pref_auto_record_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_display">

        <ListPreference
            android:key="screen_mode"
            android:title="@string/pref_screen_mode_title"
            android:entries="@array/screen_mode_entries"
            android:entryValues="@array/screen_mode_values"
            android:defaultValue="KEEP_ON"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:key="dim_level"
            android:title="@string/pref_dim_level_title"
            android:summary="@string/pref_dim_level_summary"
            android:max="100"
            app:min="5"
            android:defaultValue="20"
            app:showSeekBarValue="true" />

        <ListPreference
            android:key="units"
            android:title="@string/pref_units_title"
            android:entries="@array/units_entries"
            android:entryValues="@array/units_values"
            android:defaultValue="METRIC"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:key="pitch_deg"
            android:title="@string/pref_pitch_title"
            android:summary="@string/pref_pitch_summary"
            android:max="60"
            app:min="0"
            android:defaultValue="55"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_energy">

        <SwitchPreferenceCompat
            android:key="energy_saver"
            android:title="@string/pref_energy_saver_title"
            android:summary="@string/pref_energy_saver_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="inactivity_reminder_min"
            android:title="@string/pref_inactivity_title"
            android:summary="@string/pref_inactivity_summary"
            android:entries="@array/inactivity_entries"
            android:entryValues="@array/inactivity_values"
            android:defaultValue="10" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_route">

        <ListPreference
            android:key="off_route_m"
            android:title="@string/pref_off_route_title"
            android:entries="@array/off_route_entries"
            android:entryValues="@array/off_route_values"
            android:defaultValue="50"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_downloads">

        <SwitchPreferenceCompat
            android:key="wifi_only_downloads"
            android:title="@string/pref_wifi_only_title"
            android:summary="@string/pref_wifi_only_summary"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="planet_url"
            android:title="@string/pref_planet_url_title"
            android:summary="@string/pref_planet_url_summary"
            android:dialogTitle="@string/pref_planet_url_title"
            android:dialogMessage="@string/pref_planet_url_dialog" />

    </PreferenceCategory>

</PreferenceScreen>
