<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_tracks"
        android:title="@string/menu_tracks" />
    <item
        android:id="@+id/action_stats"
        android:title="@string/menu_stats" />
    <item
        android:id="@+id/action_import_route"
        android:title="@string/menu_import_route" />
    <item
        android:id="@+id/action_clear_route"
        android:title="@string/menu_clear_route" />
    <item
        android:id="@+id/action_download_map"
        android:title="@string/menu_download_map" />
    <item
        android:id="@+id/action_map_files"
        android:title="@string/menu_map_files" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about" />
</menu>
